added fonts, added dummy data, lineup/constructors rework, dashboard page
